# rules_ros2

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  ci.bazelrc  extensions.bzl  format.patch  generate_python_requirements.sh  pyproject.toml  renovate.json5  requirements.txt  requirements_lock.txt  ruff.toml  run_buildifier.sh  rustfmt.toml  rustfmt.txt
.devcontainer/: Dockerfile.vscode  devcontainer.json  postCreateCommand.sh
.devcontainer/ubuntu_22_04_x86/: Dockerfile  devcontainer.json
.github/workflows/: ci.bazelrc  main.yml  test.sh
docs/: ros2_repos.md
examples/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  ci.bazelrc
examples/actions/: BUILD.bazel  README.md  actions.py  client.cc  launch.py  py_server.py  server.cc
examples/chatter/: BUILD.bazel  Chatter.msg  README.md  chatter.py  chatter_specs.py  launch.py  listener.cc  override_chatter_specs.py  override_params.yaml  params.yaml  py_talker.py  talker.cc  talker.rs  tests.py
examples/docker/: BUILD.bazel  entrypoint.sh.tpl  py_oci_image.bzl
examples/foxglove_bridge/: BUILD.bazel  README.md  data_paths.py.tpl  launch.py  publisher.cc  sam_bot.xacro
examples/gen_parameters/: BUILD.bazel  publisher.cpp  publisher.py  publisher_parameters.yaml
examples/lifecycle/: BUILD.bazel  README.md  launch.py  lifecycle_demo.launch.py  lifecycle_listener.cc  lifecycle_service_client.cc  lifecycle_service_client.cpp  lifecycle_talker.cc  test_lifecycle.py  tests.py
examples/proto_to_ros/: BUILD.bazel  README.md  listener.cc  message.proto  proto_to_ros.py  talker.py
examples/turtlesim/: BUILD.bazel  README.md
examples/turtlesim/action/: BUILD.bazel
examples/turtlesim/msg/: BUILD.bazel
examples/turtlesim/src/: turtle_frame.cpp
examples/turtlesim/srv/: BUILD.bazel
examples/zero_copy/: BUILD.bazel  Chatter.msg  README.md  cyclonedds.xml  listener.cc  listener.rs  roudi.py.tpl  roudi.toml  talker.cc  talker.rs  talker_tests.cc  tests.py  zero_copy.py
examples/zero_copy/configs/: BUILD.bazel
examples/zero_copy/houston/: BUILD.bazel  zero_copy.py
repositories/: BUILD.bazel  acl.BUILD.bzl  ament_cmake_ros.BUILD.bazel  ament_index.BUILD.bazel  asio.BUILD.bazel  attr.BUILD.bzl  bcr_repos.bzl  bindgen_crates.bzl  clang_configure.bzl  class_loader.BUILD.bazel  common_interfaces.BUILD.bazel  concurrentqueue.BUILD.bazel  console_bridge.BUILD.bazel  cpp_polyfills.BUILD.bazel  curl.BUILD.bazel  cyclonedds.BUILD.bazel  deps.bzl  diagnostics.BUILD.bazel  eigen.BUILD.bazel  extensions.bzl  fastcdr.BUILD.bazel  fastrtps.BUILD.bazel  fmt.BUILD.bazel  foonathan_memory.BUILD.bazel  foxglove_bridge.BUILD.bazel  generate_logging_macros.bzl  generate_logging_macros.py  generate_parameter_library.BUILD.bazel  generate_rclcpp_interface.py  generate_rclcpp_interface_getter.py  generate_rclcpp_logging_macros.py  generate_rcutils_logging_macros.py  geometry2.BUILD.bazel  gps_umd.BUILD.bazel  gpsfix_msgs.BUILD.bazel  ground_control.BUILD.bazel  ground_control_setup_stage_1.bzl  ground_control_setup_stage_2.bzl  iceoryx.BUILD.bazel  iceoryx.BUILD.bzl  (+81 more)
repositories/patches/: class_loader_fix_global_data.patch  curl_fix_openssl.patch  cyclonedds_remove_flto.patch  fix-null-allocator-and-racy-condition.-1188.patch  foonathan_memory_remove_dbg_suffix.patch  geometry2_fix-use-after-free-bug.patch  gtest_fix_fetch.patch  launch_fix_grammar_path.patch  launch_no_log_dir_latest_symlink.patch  rclcpp-16.0.1.patch  rclcpp_do-not-allocate-in-signal-handler.patch  rclcpp_fix-maybe-uninitialized-warning.patch  rclcpp_move_ts_lib_to_publisher_base.patch  rclcpp_move_ts_lib_to_subscription_base.patch  rclcpp_remove_ament_dependency.patch  rclcpp_ts_libs_ownership.patch  rclpy_fix_qos_event_h_import.patch  rcpputils_get_env_var_inline.patch  rcutils_fix-setting-allocator-to-null.-478.patch  rmw_cyclonedds-cache-writers.patch  rmw_cyclonedds-fix-typesupport-conditions-bug.patch  rmw_cyclonedds-lsan.-510.patch  rmw_fastrtps-fix-typesupport-conditions-bug.patch  rmw_implementation-2.8.1.patch  rmw_implementation_library_path.patch  rmw_initialize-the-null-strucutre-with-static-value.-378.patch  ros2_class_loader-lsan.-213.patch  ros2_rust_fix_rcl_bindings.patch  ros2_rust_fix_rclrs.patch  ros2_rust_fix_rosidl_generator.patch  ros2_rust_fix_rosidl_runtime.patch  ros2_rust_logging.patch  ros2_rust_no_msg_vendoring.patch  ros2_rust_publisher_can_loan_messages.patch  ros2cli_fix_ros2_deamon_cmd.patch  ros2cli_replace-netifaces.patch  rosbag2_keyboard-handler.patch  rosbag2_load_plugin_cli_extensions.patch  rosbag2_relax_plugin_errors.patch  rosidl-3.1.3.patch  (+9 more)
repositories/private/: BUILD.bazel  resolver.py  resolver_requirements.txt  resolver_requirements_lock.txt  ros2_repo_mappings_tests.py
repositories/rust/: BUILD.bazel
repositories/rust/rustfmt/: .gitignore  generate.sh  rustfmt_wrapper.sh  rustfmt_wrapper_impl.sh
ros2/: BUILD.bazel  action.bzl  ament.bzl  ament_setup.cc.tpl  ament_setup.cpp.tpl  ament_setup.h.tpl  ament_setup.hpp.tpl  ament_setup.py.tpl  bag.bzl  bag.py.tpl  cc_defs.bzl  cc_opts.bzl  exported_symbols.lds  extensions.bzl  interfaces.bzl  launch.bzl  launch.py.tpl  launch.sh.tpl  launch_exec.py.tpl  launch_exec.sh.tpl  param.bzl  parameters.bzl  plugin.bzl  plugin_aspects.bzl  proto2ros.bzl  proto_to_ros2.py  proto_to_ros2_converter.py  proto_to_ros2_msg.py  protobuf.bzl  py_defs.bzl  pytest_wrapper.py.tpl  resolver.py  ros2_action.py  ros2_bag.py  ros2_cmd.py  ros2_lifecycle.py  ros2_node.py  ros2_param.py  ros2_service.py  ros2_topic.py  (+9 more)
ros2/fake_ament/: BUILD.bazel
ros2/houston/: BUILD.bazel  config.yaml  config2.yaml  entity.py  example.py  generate_config.py  houston.bzl  houston.py  launch.sh.tpl  main.py
ros2/protobuf/: BUILD.bazel  common_runtime.cc  common_runtime.h  defs.bzl  proto_to_ros2.py  proto_to_ros2_converter.py  proto_to_ros2_msg.py
ros2/test/: BUILD.bazel  Test.action  cpp_idl_tests.cc  generic_publisher_tests.cc  py_idl_action_tests.py  test_rclcpp.cpp  (+4 more)
(+67 files in other folders)
