module(
    name = "rules_ros2",
    repo_name = "com_github_mvukov_rules_ros2",
)

bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.19.0")
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "llvm-project", version = "17.0.3.bcr.4")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021", versions = ["1.83.0"])
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "async-std",
    version = "1.13.2",
)
crate.spec(
    package = "async-stream",
    version = "0.3.6",
)
crate.spec(
    package = "futures",
    version = "0.3.30",
)
crate.spec(
    package = "futures-lite",
    version = "2.6.1",
)
crate.spec(
    package = "serde",
    version = "1.0.201",
    features = ["derive"],
)
crate.spec(
    package = "serde-big-array",
    version = "0.5.1",
)
crate.spec(
    package = "serde_json",
    version = "1.0.128",
)
crate.spec(
    package = "signal-hook",
    version = "0.3.17",
)
crate.spec(
    package = "tokio",
    version = "1.48.0",
)
crate.spec(
    package = "tokio-stream",
    version = "0.1.17",
)
crate.spec(
    package = "uuid",
    version = "1.18.1",
    features = ["v4", "serde"],
)
crate.from_specs(
    name = "rules_ros2_crate_index",
)
use_repo(crate, "rules_ros2_crate_index")

crate.from_specs(
    name = "rules_ros2_examples_crate_index",
)
use_repo(crate, "rules_ros2_examples_crate_index")

register_toolchains("@rules_rust_bindgen//:default_bindgen_toolchain")

# Python setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")
use_repo(python, "python_3_10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_ros2_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
pip.parse(
    hub_name = "rules_ros2_resolver_deps",
    python_version = "3.10",
    requirements_lock = "//repositories/private:resolver_requirements_lock.txt",
)
use_repo(pip, "rules_ros2_pip_deps", "rules_ros2_resolver_deps")

# ROS 2 setup
ros2_deps = use_extension("//repositories:extensions.bzl", "ros2_deps")
use_repo(
    ros2_deps,
    # ROS 2 repositories
    "ros2",
    "ros2_gps_umd",
    "foxglove_bridge",
    "ros2_xacro",
    "orocos_kdl",
    "ros2_urdf",
    "ros2_diagnostics",
    "console_bridge",
    "mcap",
    "ros2_rcl_logging_syslog",
    # Impl repos
    "ros2_ament_index",
    "ros2_class_loader",
    "ros2_common_interfaces",
    "cyclonedds",
    "ros2_geometry2",
    "iceoryx",
    "ros2_image_common",
    "ros2_kdl_parser",
    "ros2_keyboard_handler",
    "ros2_launch",
    "ros2_launch_ros",
    "ros2_libstatistics_collector",
    "ros2_message_filters",
    "osrf_pycommon",
    "ros2_pluginlib",
    "ros2_rcl",
    "ros2_rcl_interfaces",
    "ros2_rcl_logging",
    "ros2_rclcpp",
    "ros2_rclpy",
    "ros2_rcpputils",
    "ros2_rcutils",
    "ros2_resource_retriever",
    "ros2_rmw",
    "ros2_rmw_cyclonedds",
    "ros2_rmw_dds_common",
    "ros2_rmw_implementation",
    "ros2_robot_state_publisher",
    "ros2_tracing",
    "ros2cli",
    "ros2_rosbag2",
    "ros2_rosidl",
    "ros2_rosidl_python",
    "ros2_rosidl_runtime_py",
    "ros2_rosidl_typesupport",
    "ros2_rpyutils",
    "ros2_unique_identifier_msgs",
    "ros2_urdfdom",
    "ros2_urdfdom_headers",
    "ros2_rust",
    "ros2_rosidl_rust",
    "ros2_rosidl_runtime_rs",
    "rules_rust_bindgen",
    "rules_ros2_config_clang",
    "rules_rust_bindgen__bindgen-cli-0.71.1",
    # Third party repos
    "fmt",
    "spdlog",
    "libyaml",
    "pybind11",
    "tinyxml2",
    "readerwriterqueue",
    "sqlite3",
    "websocketpp",
    "asio",
    "boringssl",
    "zlib",
    "tinyxml",
    "curl",
    "zstd",
    "lz4",
    "yaml-cpp",
    "eigen",
)
