[tool.poetry]
name = "rules-ros2"
version = "0.1.0"
description = "Build ROS 2 with Bazel"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catkin-pkg = "^0.5.2"
coverage = "^7.3.0"
empy = "^3.3.4"
lark-parser = "^0.12.0"
numpy = "^1.25.2"
packaging = "^23.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
types-pkg-resources = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
