[tool.poetry]
name = "rules-ros2"
version = "0.0.0"
description = "rules_ros2 Python dependencies"
authors = []
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
argcomplete = "*"
catkin-pkg = "*"
coverage = "*"
empy = ">=3.3.0,<3.4.0"
lark-parser = "*"
numpy = ">=1.26.0,<2.0.0"
packaging = "*"
psutil = "*"
pytest = ">=7.4.0,<8.0.0"
pytest-cov = "*"
PyYAML = "*"
setuptools = "*"
wheel = "*"
types-pkg-resources = "0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
