load("@rules_ros2_pythons//3.10:defs.bzl", "py_binary")

exports_files([
    "deps.bzl",
    "logging_macros.bzl",
    "generate_rclcpp_interface.py",
    "generate_rclcpp_logging_macros.py",
    "generate_rcutils_logging_macros.py",
    "pip_annotations.bzl",
    "rclcpp_interfaces.bzl",
    "repositories.bzl",
    "ros2_repo_mappings.yaml",
    "ros2_repositories_impl.bzl",
])
