# Same as https://github.com/bazelbuild/bazel-central-registry/blob/dcff901/modules/asio/1.31.0/overlay/BUILD.bazel

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "asio",
    srcs = [
        "asio/src/asio.cpp",
        "asio/src/asio_ssl.cpp",
    ],
    hdrs = glob([
        "asio/include/**/*.hpp",
        "asio/include/**/*.ipp",
    ]),
    includes = ["asio/include"],
    local_defines = ["ASIO_SEPARATE_COMPILATION"],
    visibility = ["//visibility:public"],
    deps = ["@boringssl//:ssl"],
)
