""" Builds common_interfaces.
"""

load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "std_msgs",
    srcs = glob(["std_msgs/msg/*.msg"]),
    deps = ["@ros2_rcl_interfaces//:builtin_interfaces"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_std_msgs",
    deps = [":std_msgs"],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "geometry_msgs",
    srcs = glob(["geometry_msgs/msg/*.msg"]),
    deps = [":std_msgs"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_geometry_msgs",
    deps = [":geometry_msgs"],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "nav_msgs",
    srcs = glob(["nav_msgs/msg/*.msg", "nav_msgs/srv/*.srv"]),
    deps = [":geometry_msgs", ":std_msgs"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_nav_msgs",
    deps = [":nav_msgs"],
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "sensor_msgs",
    srcs = glob(["sensor_msgs/msg/*.msg", "sensor_msgs/srv/*.srv"]),
    deps = [":geometry_msgs", ":std_msgs"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_sensor_msgs",
    deps = [":sensor_msgs"],
    visibility = ["//visibility:public"],
)
