""" Builds common_interfaces.
"""

load(
    "@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl",
    "ros2_cpp_library",
)
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "std_msgs",
    srcs = glob(["std_msgs/msg/*.msg"]),
    visibility = ["//visibility:public"],
    deps = ["@ros2_rcl_interfaces//:builtin_interfaces"],
)

cpp_ros2_interface_library(
    name = "cpp_std_msgs",
    visibility = ["//visibility:public"],
    deps = [":std_msgs"],
)

py_ros2_interface_library(
    name = "py_std_msgs",
    visibility = ["//visibility:public"],
    deps = [":std_msgs"],
)

ros2_interface_library(
    name = "geometry_msgs",
    srcs = glob(["geometry_msgs/msg/*.msg"]),
    visibility = ["//visibility:public"],
    deps = [":std_msgs"],
)

cpp_ros2_interface_library(
    name = "cpp_geometry_msgs",
    visibility = ["//visibility:public"],
    deps = [":geometry_msgs"],
)

ros2_interface_library(
    name = "nav_msgs",
    srcs = glob([
        "nav_msgs/msg/*.msg",
        "nav_msgs/srv/*.srv",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":geometry_msgs",
        ":std_msgs",
    ],
)

cpp_ros2_interface_library(
    name = "cpp_nav_msgs",
    visibility = ["//visibility:public"],
    deps = [":nav_msgs"],
)

ros2_interface_library(
    name = "sensor_msgs",
    srcs = glob([
        "sensor_msgs/msg/*.msg",
        "sensor_msgs/srv/*.srv",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":geometry_msgs",
        ":std_msgs",
    ],
)

cpp_ros2_interface_library(
    name = "_cpp_sensor_msgs",
    visibility = ["//visibility:private"],
    deps = [":sensor_msgs"],
)

ros2_cpp_library(
    name = "cpp_sensor_msgs",
    hdrs = glob([
        "sensor_msgs/include/**/*.hpp",
    ]),
    strip_include_prefix = "sensor_msgs/include",
    visibility = ["//visibility:public"],
    deps = [":_cpp_sensor_msgs"],
)

ros2_interface_library(
    name = "visualization_msgs",
    srcs = glob([
        "visualization_msgs/msg/*.msg",
        "visualization_msgs/srv/*.srv",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":geometry_msgs",
        ":sensor_msgs",
        ":std_msgs",
    ],
)

cpp_ros2_interface_library(
    name = "cpp_visualization_msgs",
    visibility = ["//visibility:public"],
    deps = [":visualization_msgs"],
)
